--- a/python/src/MethodOfMomentsFactory_doc.i.in
+++ b/python/src/MethodOfMomentsFactory_doc.i.in
@@ -12,24 +12,54 @@ bounds : :class:`~openturns.Interval`, optional
 
 Notes
 -----
-This method fits a scalar distribution to data of dimension 1, using the method of moments.
+This method fits a distribution to data of dimension 1, using the method of moments.
 
-Let :math:`(\vect{x}_1, \dots, \vect{x}_n)` denote the sample, :math:`F_{\vect{\theta}}`
+Let :math:`(x_1, \dots, x_n)` be
+the sample, :math:`F_{\vect{\theta}}`
 the  cumulative distribution function we want to fit to the sample,
-and :math:`\vect{\theta} \in  \Theta \subset\Rset^p`  its parameter vector.
+and :math:`\vect{\theta} = (\theta_1, \dots, \theta_{d_{\theta}}) \in \Rset^{d_\theta}`
+its parameter vector
+where :math:`{d_\theta} \in \Nset` is the number of parameters of the parametric model.
 
-Let :math:`K` denote the number of parameters of the distribution and we assume that 
-the :math:`K` first moments of the distribution exist.
-
-Let :math:`(\mu_1, \dots, \mu_K)` denote the :math:`K` first central moments of the sample and
-and :math:`(m_1, \dots, m_K)` those of the parametric model.
-
-The estimator :math:`\hat{\theta}` minimizes the sum of slacks between
-:math:`(\mu_1, \dots, \mu_K)` and :math:`(m_1, \dots, m_K)`. It is defined by:
+We assume that
+the :math:`d_\theta` first moments of the distribution exist. Let :math:`(\mu_1, \dots, \mu_{d_\theta})`
+be the mean and the :math:`(d_\theta -1)`
+first centered  moments of the parametric model. They can be
+can be expressed as a function of the :math:`\vect{\theta}`:
 
 .. math::
 
-    \Delta = \argmin_{\vect{\theta} \in \Rset^K} \left[ \dfrac{|\mu_1-m_1|}{\sigma} \right]^2 + \sum_{i=2}^K \left[ \dfrac{|\mu_i|^{1/i}-|m_i|^{1/i}}{\sigma} \right]^2
+    \mu_1 & =  \Expect{X} = g_1(\theta_1, \dots, \theta_{d_\theta})  \\
+    \mu_k & =  \Expect{(X - \mu_1)^k} = g_k(\theta_1, \dots, \theta_{d_\theta}), \quad 2 \leq k \leq d_\theta.
+
+
+Let :math:`(\widehat{\mu}_1, \dots, \widehat{\mu}_{d_\theta})` be the empirical mean and the
+:math:`(d_\theta -1)` first empirical centered  moments
+evaluated on the sample :math:`(x_1, \dots, x_n)`:
+
+.. math::
+
+    \widehat{\mu}_1 & = \dfrac{1}{n} \sum_{i=1}^n x_i \\
+    \widehat{\mu}_k & = \dfrac{1}{n} \sum_{i=1}^n (x_i - \widehat{\mu}_1)^k, \quad 2 \leq k \leq d_\theta.
+
+Then the estimator :math:`\widehat{\theta} = \left(\widehat{\theta}_1,
+\dots, \widehat{\theta}_{d_\theta}\right)` built by the method of moments is solution of the
+following nonlinear system:
+
+.. math::
+    :label: MethMomSyst
+
+    \widehat{\mu}_1 & =  g_1(\theta_1, \dots, \theta_{d_\theta}) \\
+    \widehat{\mu}_2 & = g_2(\theta_1, \dots, \theta_{d_\theta}) \\
+    \vdots &  \\
+    \widehat{\mu}_{d_\theta} & = g_{d_\theta}(\theta_1, \dots, \theta_{d_\theta})
+
+which is equivalent to the solution of the following optimization problem:
+
+.. math::
+
+    \widehat{\theta} = \argmin_{\vect{\theta} \in \Rset^{d_\theta}}  \sum_{k=1}^{d_\theta} \left[ \left( g_k(\vect{\theta}) \right)^{1/k}-
+    \widehat{\mu}_k^{1/k} \right]^2
 
 
 See also
