--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1036,6 +1036,7 @@ ot_add_python_module(experimental experimental_module.i
                      GaussianProcessRegressionResult.i GaussianProcessRegressionResult_doc.i.in
                      GaussianProcessRegression.i GaussianProcessRegression_doc.i.in
                      GaussianProcessConditionalCovariance.i GaussianProcessConditionalCovariance_doc.i.in
+                     LeastSquaresEquationsSolver.i LeastSquaresEquationsSolver_doc.i.in
                     )
 set (OPENTURNS_PYTHON_MODULES ${OPENTURNS_PYTHON_MODULES} PARENT_SCOPE) # for the docstring test
 
