Renamed isModelSelection into involvesModelSelection

--- a/python/src/AdaptiveStrategyImplementation_doc.i.in
+++ b/python/src/AdaptiveStrategyImplementation_doc.i.in
@@ -138,7 +138,7 @@ OT_AdaptiveStrategy_updateBasis_doc
 
 // ---------------------------------------------------------------------
 
-%define OT_AdaptiveStrategy_isModelSelection_doc
+%define OT_AdaptiveStrategy_involvesModelSelection_doc
 "Get the model selection flag.
 
 A model selection method can be used to select the coefficients
@@ -147,9 +147,9 @@ Model selection can lead to a sparse functional chaos expansion.
 
 Returns
 -------
-isModelSelection: bool
+involvesModelSelection: bool
     True if the method involves a model selection method."
 
 %enddef
-%feature("docstring") OT::AdaptiveStrategyImplementation::isModelSelection
-OT_AdaptiveStrategy_isModelSelection_doc
+%feature("docstring") OT::AdaptiveStrategyImplementation::involvesModelSelection
+OT_AdaptiveStrategy_involvesModelSelection_doc
