--- a/python/src/ApproximationAlgorithmImplementation_doc.i.in
+++ b/python/src/ApproximationAlgorithmImplementation_doc.i.in
@@ -115,7 +115,7 @@ OT_ApproximationAlgorithm_run_doc
 
 // ---------------------------------------------------------------------
 
-%define OT_ApproximationAlgorithm_isModelSelection_doc
+%define OT_ApproximationAlgorithm_involvesModelSelection_doc
 "Get the model selection flag.
 
 A model selection method can be used to select the coefficients
@@ -124,9 +124,9 @@ Model selection can lead to a sparse functional chaos expansion.
 
 Returns
 -------
-isModelSelection: bool
+involvesModelSelection: bool
     True if the method involves a model selection method."
 %enddef
-%feature("docstring") OT::ApproximationAlgorithmImplementation::isModelSelection
-OT_ApproximationAlgorithm_isModelSelection_doc
+%feature("docstring") OT::ApproximationAlgorithmImplementation::involvesModelSelection
+OT_ApproximationAlgorithm_involvesModelSelection_doc
 
