--- a/python/src/ProjectionStrategyImplementation_doc.i.in
+++ b/python/src/ProjectionStrategyImplementation_doc.i.in
@@ -279,7 +279,7 @@ OT_ProjectionStrategy_isLeastSquares_doc
 
 // ---------------------------------------------------------------------
 
-%define OT_ProjectionStrategy_isModelSelection_doc
+%define OT_ProjectionStrategy_involvesModelSelection_doc
 "Get the model selection flag.
 
 A model selection method can be used to select the coefficients
@@ -288,8 +288,8 @@ Model selection can lead to a sparse functional chaos expansion.
 
 Returns
 -------
-isModelSelection: bool
+involvesModelSelection: bool
     True if the method involves a model selection method."
 %enddef
-%feature("docstring") OT::ProjectionStrategyImplementation::isModelSelection
-OT_ProjectionStrategy_isModelSelection_doc
+%feature("docstring") OT::ProjectionStrategyImplementation::involvesModelSelection
+OT_ProjectionStrategy_involvesModelSelection_doc
