--- a/python/src/ProjectionStrategy_doc.i.in
+++ b/python/src/ProjectionStrategy_doc.i.in
@@ -32,5 +32,5 @@ OT_ProjectionStrategy_setMeasure_doc
 OT_ProjectionStrategy_getDesignProxy_doc
 %feature("docstring") OT::ProjectionStrategy::isLeastSquares
 OT_ProjectionStrategy_isLeastSquares_doc
-%feature("docstring") OT::ProjectionStrategy::isModelSelection
-OT_ProjectionStrategy_isModelSelection_doc
+%feature("docstring") OT::ProjectionStrategy::involvesModelSelection
+OT_ProjectionStrategy_involvesModelSelection_doc
