--- a/python/src/LeastSquaresMetaModelSelectionFactory_doc.i.in
+++ b/python/src/LeastSquaresMetaModelSelectionFactory_doc.i.in
@@ -24,7 +24,7 @@ Notes
 Implementation of an approximation algorithm implementation factory which builds
 an :class:`~openturns.ApproximationAlgorithm`.
 
-This class is not usable because it has sense only within the
+This class is not usable because it is operational only within the
 :class:`~openturns.FunctionalChaosAlgorithm`.
 
 Examples
